--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,6 @@
     <name>cartoshka</name>
     <url>https://github.com/2gis/cartoshka</url>
     <description>CartoCSS parser for Java</description>
-    <organization>
-        <name>2GIS L.L.C.</name>
-        <url>http://info.2gis.com/</url>
-    </organization>
     <licenses>
         <license>
             <name>Mozilla Public License, Version 2.0</name>
@@ -27,6 +23,14 @@
         <developerConnection>scm:git:git@github.com:2gis/cartoshka.git</developerConnection>
         <url>git@github.com:2gis/cartoshka.git</url>
     </scm>
+    <developers>
+        <developer>
+            <name>Artem Tartakynov</name>
+            <email>artem.tad@gmail.com</email>
+            <organization>2GIS</organization>
+            <organizationUrl>http://info.2gis.com</organizationUrl>
+        </developer>
+    </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
