--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jbehave</groupId>
+            <artifactId>jbehave-core</artifactId>
+            <version>3.9.3</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
